--- a/src/components/password/styles.scss
+++ b/src/components/password/styles.scss
@@ -42,3 +42,12 @@ outline: none;
     }
    
 }
+
+.backButton{
+    font-size: 30px;
+    font-weight: 900;
+    position: absolute;
+    top: -20px;
+    left: 5px;
+    cursor: pointer;
+}
