--- a/src/components/posts/styles.scss
+++ b/src/components/posts/styles.scss
@@ -28,11 +28,20 @@
     padding: 4px;
   }
 }
+.popupBackground{
+  background-color: rgba(0, 0, 0, 0.404);
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .popup {
-    position: absolute;
-    top: 10rem;
-    left: 507px;
+    position: relative;
     width: 21rem;
     height: 19rem;
     z-index: 99;
