fixing image size

--- a/src/components/posts/styles.scss
+++ b/src/components/posts/styles.scss
@@ -18,6 +18,7 @@
     align-self: center;
     margin: auto 0 !important;
     margin-left: 3%;
+    width: 7rem !important;
   }
   .spacer {
     width: 2rem;
