--- a/src/components/posts/styles.scss
+++ b/src/components/posts/styles.scss
@@ -13,6 +13,7 @@
   align-items: center;
  padding: 0 6px;
   border-radius: 41px;
+  margin-top: 4%;
   .img {
     border-radius: 18px;
     align-self: center;
@@ -27,6 +28,9 @@
     font-size: 14px;
     flex: 1;
     padding: 4px;
+    p{
+      word-break: break-all;
+    }
   }
 }
 .popupBackground{
@@ -122,3 +126,13 @@ display: block;
 
 }
 
+.posts{
+
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin-top: 5rem !important;
+  height: 28rem;
+  overflow-y: auto;
+}
+  
